DDF-6332: Added CSS to fix 2D zoom overlay bleed

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/visualization/maps/openlayers/openlayers.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/visualization/maps/openlayers/openlayers.less
@@ -22,6 +22,8 @@
   background-color: @backgroundNavigation;
 }
 .ol-zoom {
+  top: auto;
+  left: auto;
   bottom: 3em;
   right: 0.5em;
   position: absolute;
